--- a/LongExpoOwlCalc/Localizable.xcstrings
+++ b/LongExpoOwlCalc/Localizable.xcstrings
@@ -1,110 +1,8 @@
 {
   "sourceLanguage" : "en",
   "strings" : {
-    "\n\n⚠️ Warning: Exposure difference of %.1f stops" : {
-      "extractionState" : "stale",
-      "localizations" : {
-        "zh-Hans" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "⚠️ 警告：曝光误差 %.1f 档"
-          }
-        },
-        "zh-Hant" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "⚠️ 警告：曝光誤差 %.1f 檔"
-          }
-        }
-      }
-    },
-    "\n\nℹ️ Note: Small exposure difference of %.1f stops" : {
-      "extractionState" : "stale",
-      "localizations" : {
-        "zh-Hans" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "ℹ️ 提示：存在 %.1f 档的轻微曝光差异"
-          }
-        },
-        "zh-Hant" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "\\n\\nℹ️ 提示：存在 %.1f 檔的輕微曝光差異"
-          }
-        }
-      }
-    },
-    "\n- Consider unlocking aperture for more precise exposure" : {
-      "extractionState" : "stale",
-      "localizations" : {
-        "zh-Hans" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "- 考虑解除光圈锁定以获得更精确的曝光 "
-          }
-        },
-        "zh-Hant" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "\\n- 考慮解除光圈鎖定以獲得更精確的曝光"
-          }
-        }
-      }
-    },
-    "\n- Consider unlocking ISO for more precise exposure" : {
-      "extractionState" : "stale",
-      "localizations" : {
-        "zh-Hans" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "- 考虑解除感光度锁定以获得更精确的曝光 "
-          }
-        },
-        "zh-Hant" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "\\n- 考慮解除感光度鎖定以獲得更精確的曝光"
-          }
-        }
-      }
-    },
-    "\n- Try a different ND filter combination" : {
-      "extractionState" : "stale",
-      "localizations" : {
-        "zh-Hans" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "- 尝试使用不同的滤镜组合"
-          }
-        },
-        "zh-Hant" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "\\n- 嘗試使用不同的濾鏡組合"
-          }
-        }
-      }
-    },
-    "\nSuggestions:" : {
-      "extractionState" : "stale",
-      "localizations" : {
-        "zh-Hans" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "建议："
-          }
-        },
-        "zh-Hant" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "推薦："
-          }
-        }
-      }
-    },
     "%.1fs" : {
-      "comment" : "Time format",
+      "comment" : "Time format\nTime format decimal seconds",
       "localizations" : {
         "zh-Hans" : {
           "stringUnit" : {
@@ -137,6 +35,17 @@
         }
       }
     },
+    "%d:%02d" : {
+      "comment" : "Time format minutes:seconds",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "new",
+            "value" : "%1$d:%2$02d"
+          }
+        }
+      }
+    },
     "%dm %ds" : {
       "comment" : "Time format",
       "localizations" : {
@@ -161,7 +70,7 @@
       }
     },
     "%ds" : {
-      "comment" : "Time format",
+      "comment" : "Time format\nTime format seconds",
       "localizations" : {
         "zh-Hans" : {
           "stringUnit" : {
@@ -192,6 +101,12 @@
           }
         }
       }
+    },
+    "1 min" : {
+      "comment" : "Preset for 1 minute"
+    },
+    "1 sec" : {
+      "comment" : "Preset for 1 second"
     },
     "1 stop" : {
       "localizations" : {
@@ -225,51 +140,26 @@
         }
       }
     },
-    "Adjusted Aperture to f/%.1f, Remaining Stops: %d (%.2f)\n" : {
-      "extractionState" : "stale",
-      "localizations" : {
-        "en" : {
-          "stringUnit" : {
-            "state" : "new",
-            "value" : "Adjusted Aperture to f/%1$.1f, Remaining Stops: %2$d (%3$.2f)\n"
-          }
-        },
-        "zh-Hans" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "已调整光圈至 f/%1$.1f，剩余档数：%2$d (%3$.2f)"
-          }
-        },
-        "zh-Hant" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "已調整光圈至 f/%1$.1f，剩餘檔數：%2$d (%3$.2f)"
-          }
-        }
-      }
+    "2 min" : {
+      "comment" : "Preset for 2 minutes"
     },
-    "Adjusted ISO to %d, Remaining Stops: %d (%.2f)\n" : {
-      "extractionState" : "stale",
-      "localizations" : {
-        "en" : {
-          "stringUnit" : {
-            "state" : "new",
-            "value" : "Adjusted ISO to %1$d, Remaining Stops: %2$d (%3$.2f)\n"
-          }
-        },
-        "zh-Hans" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "已调整 ISO 至 %1$d，剩余档数：%2$d (%3$.2f)"
-          }
-        },
-        "zh-Hant" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "已調整 ISO 至 %1$d，剩餘檔數：%2$d (%3$.2f)"
-          }
-        }
-      }
+    "5 min" : {
+      "comment" : "Preset for 5 minutes"
+    },
+    "5 sec" : {
+      "comment" : "Preset for 5 seconds"
+    },
+    "15 sec" : {
+      "comment" : "Preset for 15 seconds"
+    },
+    "30 sec" : {
+      "comment" : "Preset for 30 seconds"
+    },
+    "Adjusted aperture: f/%.1f" : {
+      "comment" : "Log message"
+    },
+    "Adjusted ISO: %d" : {
+      "comment" : "Log message"
     },
     "Adjustment Priority" : {
       "localizations" : {
@@ -288,6 +178,7 @@
       }
     },
     "Aperture" : {
+      "comment" : "Label for aperture control\nLabel for aperture setting",
       "localizations" : {
         "zh-Hans" : {
           "stringUnit" : {
@@ -315,23 +206,6 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "光圈鎖定"
-          }
-        }
-      }
-    },
-    "Aperture Priority Mode: Adjusting ISO only\n" : {
-      "extractionState" : "stale",
-      "localizations" : {
-        "zh-Hans" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "光圈优先模式：仅调整 ISO"
-          }
-        },
-        "zh-Hant" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "光圈優先模式：僅調整 ISO"
           }
         }
       }
@@ -384,23 +258,6 @@
         }
       }
     },
-    "Auto Mode: Adjusting both Aperture and ISO\n" : {
-      "extractionState" : "stale",
-      "localizations" : {
-        "zh-Hans" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "自动模式：同时调整光圈和 ISO"
-          }
-        },
-        "zh-Hant" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "自動模式：同時調整光圈和 ISO"
-          }
-        }
-      }
-    },
     "Available ND Filters" : {
       "localizations" : {
         "zh-Hans" : {
@@ -434,6 +291,7 @@
       }
     },
     "Calculate" : {
+      "comment" : "Button to calculate exposure",
       "localizations" : {
         "zh-Hans" : {
           "stringUnit" : {
@@ -449,6 +307,9 @@
         }
       }
     },
+    "Calculation completed, ready to show results:" : {
+
+    },
     "CALCULATION MODE Ver 1.3" : {
       "localizations" : {
         "zh-Hans" : {
@@ -461,23 +322,6 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "計算模式 Ver 1.3"
-          }
-        }
-      }
-    },
-    "Calculation Mode: %@\n\n" : {
-      "extractionState" : "stale",
-      "localizations" : {
-        "zh-Hans" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "计算模式： %@"
-          }
-        },
-        "zh-Hant" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "計算模式:  %@\n\n"
           }
         }
       }
@@ -504,22 +348,14 @@
         }
       }
     },
-    "Calculation Process:\n" : {
-      "extractionState" : "stale",
-      "localizations" : {
-        "zh-Hans" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "计算过程"
-          }
-        },
-        "zh-Hant" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "計算過程："
-          }
-        }
-      }
+    "Calculation Result" : {
+      "comment" : "Title for result popup"
+    },
+    "Calculation started:" : {
+
+    },
+    "Camera Settings" : {
+      "comment" : "Heading for camera settings"
     },
     "Cancel" : {
       "localizations" : {
@@ -536,6 +372,24 @@
           }
         }
       }
+    },
+    "Consider unlocking aperture for more precise exposure" : {
+      "comment" : "Suggestion in aperture priority mode"
+    },
+    "Consider unlocking ISO for more precise exposure" : {
+      "comment" : "Suggestion in ISO priority mode"
+    },
+    "Countdown seconds: %d" : {
+      "comment" : "Log message"
+    },
+    "Crowd Removal" : {
+      "comment" : "Photography style"
+    },
+    "Crowd Removal Effect" : {
+      "comment" : "Photography effect for exposures up to 60 seconds"
+    },
+    "Current Settings" : {
+      "comment" : "Section title for current camera settings"
     },
     "Done" : {
       "localizations" : {
@@ -569,6 +423,12 @@
         }
       }
     },
+    "Exposure difference of %.1f stops" : {
+      "comment" : "Warning about large exposure difference"
+    },
+    "Exposure time: %@" : {
+      "comment" : "Log message"
+    },
     "f/%@" : {
       "localizations" : {
         "zh-Hans" : {
@@ -585,28 +445,8 @@
         }
       }
     },
-    "Initial Settings: Shutter Speed %@, Aperture f/%.1f, ISO %d\n" : {
-      "extractionState" : "stale",
-      "localizations" : {
-        "en" : {
-          "stringUnit" : {
-            "state" : "new",
-            "value" : "Initial Settings: Shutter Speed %1$@, Aperture f/%2$.1f, ISO %3$d\n"
-          }
-        },
-        "zh-Hans" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "初始设置：快门速度 %1$@，光圈 f/%2$.1f，ISO %3$d"
-          }
-        },
-        "zh-Hant" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "初始設置：快門速度 %1$@，光圈 f/%2$.1f，ISO %3$d"
-          }
-        }
-      }
+    "Fog Effect" : {
+      "comment" : "Photography effect for exposures up to 120 seconds\nPhotography style"
     },
     "Initial Setup" : {
       "localizations" : {
@@ -711,23 +551,6 @@
         }
       }
     },
-    "ISO Priority Mode: Adjusting Aperture only\n" : {
-      "extractionState" : "stale",
-      "localizations" : {
-        "zh-Hans" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "ISO 优先模式：仅调整光圈"
-          }
-        },
-        "zh-Hant" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "ISO 優先模式：僅調整光圈"
-          }
-        }
-      }
-    },
     "ISO SETTINGS" : {
       "localizations" : {
         "zh-Hans" : {
@@ -775,6 +598,9 @@
           }
         }
       }
+    },
+    "Long Exposure" : {
+      "comment" : "Section title for long exposure settings"
     },
     "Lowest Native ISO" : {
       "localizations" : {
@@ -856,6 +682,18 @@
         }
       }
     },
+    "Minimalist" : {
+      "comment" : "Photography style"
+    },
+    "Minimalist Landscape" : {
+      "comment" : "Photography effect for exposures over 120 seconds"
+    },
+    "Misty Water Effect" : {
+      "comment" : "Photography effect for exposures up to 30 seconds"
+    },
+    "Misty Waves" : {
+      "comment" : "Photography style"
+    },
     "My Filters: %@" : {
       "localizations" : {
         "zh-Hans" : {
@@ -936,30 +774,6 @@
         }
       }
     },
-    "ND Filters: %@\nAperture: f/%.1f, ISO %d\nShutter Speed: %@" : {
-      "comment" : "Result format",
-      "extractionState" : "stale",
-      "localizations" : {
-        "en" : {
-          "stringUnit" : {
-            "state" : "new",
-            "value" : "ND Filters: %1$@\nAperture: f/%2$.1f, ISO %3$d\nShutter Speed: %4$@"
-          }
-        },
-        "zh-Hans" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "滤镜：%1$@\n光圈：f/%2$.1f，ISO %3$d\n快门速度：%4$@"
-          }
-        },
-        "zh-Hant" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "濾鏡：%1$@\n光圈：f/%2$.1f，ISO %3$d\n快門速度：%4$@"
-          }
-        }
-      }
-    },
     "No Filters Selected" : {
       "localizations" : {
         "zh-Hans" : {
@@ -977,6 +791,7 @@
       }
     },
     "No ND Filters Selected" : {
+      "comment" : "Alert title for no filters selected",
       "localizations" : {
         "zh-Hans" : {
           "stringUnit" : {
@@ -991,6 +806,9 @@
           }
         }
       }
+    },
+    "Note" : {
+      "comment" : "Title for information level warning"
     },
     "Off" : {
       "localizations" : {
@@ -1009,6 +827,7 @@
       }
     },
     "OK" : {
+      "comment" : "Alert dismiss button",
       "localizations" : {
         "zh-Hans" : {
           "stringUnit" : {
@@ -1039,6 +858,15 @@
           }
         }
       }
+    },
+    "Original aperture: f/%.1f" : {
+      "comment" : "Log message"
+    },
+    "Original ISO: %d" : {
+      "comment" : "Log message"
+    },
+    "Original shutter speed: %@" : {
+      "comment" : "Log message"
     },
     "Pause" : {
       "comment" : "Pause button text",
@@ -1106,6 +934,7 @@
       }
     },
     "Pro Calculator" : {
+      "comment" : "Navigation title",
       "localizations" : {
         "zh-Hans" : {
           "stringUnit" : {
@@ -1121,62 +950,11 @@
         }
       }
     },
-    "Recommended ND Filter Combination: %@\n" : {
-      "extractionState" : "stale",
-      "localizations" : {
-        "zh-Hans" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "推荐的滤镜组合：%@"
-          }
-        },
-        "zh-Hant" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "推薦的濾鏡組合：%@"
-          }
-        }
-      }
+    "Recommended Filters" : {
+      "comment" : "Heading for filter recommendations"
     },
-    "Remaining Stops After Filters: %d stops (%.2f)\n\n" : {
-      "extractionState" : "stale",
-      "localizations" : {
-        "en" : {
-          "stringUnit" : {
-            "state" : "new",
-            "value" : "Remaining Stops After Filters: %1$d stops (%2$.2f)\n\n"
-          }
-        },
-        "zh-Hans" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "滤镜后剩余档数：%1$d 档 (%2$.2f)"
-          }
-        },
-        "zh-Hant" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "濾鏡後剩餘檔數：%1$d 檔 (%2$.2f)"
-          }
-        }
-      }
-    },
-    "Remaining stops within acceptable range (±0.3), no adjustment needed\n" : {
-      "extractionState" : "stale",
-      "localizations" : {
-        "zh-Hans" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "剩余档数在可接受范围内（±0.3），无需调整"
-          }
-        },
-        "zh-Hant" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "剩餘檔數在可接受範圍內（±0.3），無需調整"
-          }
-        }
-      }
+    "Recommended filters: %@" : {
+      "comment" : "Log message"
     },
     "Required: Select Your ND Filters" : {
       "localizations" : {
@@ -1323,6 +1101,7 @@
       }
     },
     "Shutter Speed" : {
+      "comment" : "Label for shutter speed picker",
       "localizations" : {
         "zh-Hans" : {
           "stringUnit" : {
@@ -1337,6 +1116,9 @@
           }
         }
       }
+    },
+    "Small exposure difference of %.1f stops" : {
+      "comment" : "Information about small exposure difference"
     },
     "Start" : {
       "comment" : "Start button text",
@@ -1371,45 +1153,41 @@
         }
       }
     },
-    "Target Exposure Time: %.1f seconds\n" : {
-      "extractionState" : "stale",
-      "localizations" : {
-        "zh-Hans" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "目标曝光时间：%.1f 秒"
-          }
-        },
-        "zh-Hant" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "目標曝光時間：%.1f 秒"
-          }
-        }
-      }
+    "Start Exposure" : {
+      "comment" : "Button to start exposure countdown"
     },
-    "Total Stops Difference: %d stops (%.2f)\n\n" : {
-      "extractionState" : "stale",
-      "localizations" : {
-        "en" : {
-          "stringUnit" : {
-            "state" : "new",
-            "value" : "Total Stops Difference: %1$d stops (%2$.2f)\n\n"
-          }
-        },
-        "zh-Hans" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "总档数差异：%1$d 档 (%2$.2f)"
-          }
-        },
-        "zh-Hant" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "總檔數差異：%1$d 檔 (%2$.2f)"
-          }
-        }
-      }
+    "Subtle Motion Blur" : {
+      "comment" : "Photography effect for exposures up to 1 second"
+    },
+    "Suggestions:" : {
+      "comment" : "Heading for suggestions"
+    },
+    "Suitable for: %@" : {
+      "comment" : "Label for photography effect suggestion"
+    },
+    "Target Exposure Time" : {
+      "comment" : "Heading for exposure time\nLabel for target exposure time"
+    },
+    "Target exposure time: %.1f seconds" : {
+      "comment" : "Log message"
+    },
+    "Try a different ND filter combination" : {
+      "comment" : "Suggestion in auto mode\nSuggestion when no adjustment was made"
+    },
+    "Warning" : {
+      "comment" : "Title for warning level alert"
+    },
+    "Waterfall/Stream" : {
+      "comment" : "Photography style"
+    },
+    "Waterfall/Stream Effect" : {
+      "comment" : "Photography effect for exposures up to 5 seconds"
+    },
+    "Wave Streaking" : {
+      "comment" : "Photography style"
+    },
+    "Wave Streaking Effect" : {
+      "comment" : "Photography effect for exposures up to 15 seconds"
     },
     "You can only select up to 2 ND filters. Please deselect one before selecting another." : {
       "localizations" : {
@@ -1444,6 +1222,7 @@
       }
     },
     "You must select the ND filters you own before calculating." : {
+      "comment" : "Alert message for no filters selected",
       "localizations" : {
         "zh-Hans" : {
           "stringUnit" : {
@@ -1459,19 +1238,7 @@
         }
       }
     },
-    "光圈" : {
-
-    },
     "建议:" : {
-
-    },
-    "开始曝光" : {
-
-    },
-    "当前设置" : {
-
-    },
-    "推荐使用滤镜" : {
 
     },
     "提示" : {
@@ -1483,28 +1250,10 @@
     "滤镜" : {
 
     },
-    "目标曝光时间" : {
-
-    },
     "相机设置" : {
 
     },
-    "相机设置调整" : {
-
-    },
     "警告" : {
-
-    },
-    "计算" : {
-
-    },
-    "计算结果" : {
-
-    },
-    "适合：%@" : {
-
-    },
-    "长曝光" : {
 
     }
   },
